p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  labels:
    app: iot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-app
      version: "0.1"
  template:
    metadata:
      labels:
        app: iot-app
        version: "0.1"
    spec:
      containers:
        - name: iot-app
          image: soofiane262/iot-app:0.1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels:
    app: iot-app
spec:
  selector:
    app: iot-app
    version: "0.1"
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80
