p2/confs/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: iot-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: iot-app
      version: "0.2"
  template:
    metadata:
      labels:
        app: iot-app
        version: "0.2"
    spec:
      containers:
        - name: iot-app
          image: soofiane262/iot-app:0.2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  labels:
    app: iot-app
spec:
  selector:
    app: iot-app
    version: "0.2"
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
