p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  labels:
    app: iot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-app
      version: "0.3"
  template:
    metadata:
      labels:
        app: iot-app
        version: "0.3"
    spec:
      containers:
        - name: iot-app
          image: soofiane262/iot-app:0.3
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  labels:
    app: iot-app
spec:
  selector:
    app: iot-app
    version: "0.3"
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3-service
                port:
                  number: 80
